--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gatsby-starter-default",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
+  "homepage":"https://TomaszKlepacki.github.io/new_test",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
@@ -25,6 +26,7 @@
     "gatsby-transformer-json": "^2.4.5",
     "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.5",
+    "gh-pages": "^3.2.3",
     "google-map-react": "^2.1.9",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -55,13 +57,16 @@
   ],
   "license": "MIT",
   "scripts": {
+    
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+   "predeply": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
